--- a/job/pom.xml
+++ b/job/pom.xml
@@ -43,6 +43,25 @@
 		    <scope>provided</scope>
 		</dependency>	
 		
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sqs -->
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-sqs</artifactId>
+		    <version>1.12.99</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>amazon-sqs-java-messaging-lib</artifactId>
+		    <version>1.0.4</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jms</artifactId>
+		</dependency>		
+		
+		
 <!-- 		<dependency> -->
 <!-- 		    <groupId>com.fasterxml.jackson.core</groupId> -->
 <!-- 		    <artifactId>jackson-databind</artifactId> -->
