--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -57,7 +57,22 @@
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-jms</artifactId>
-		</dependency>				
+		</dependency>		
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>		
+		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		</dependency>		
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>	
 	</dependencies>
 
 	<build>
