--- a/job/pom.xml
+++ b/job/pom.xml
@@ -61,12 +61,20 @@
 		    <artifactId>spring-jms</artifactId>
 		</dependency>		
 		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>		
 		
-<!-- 		<dependency> -->
-<!-- 		    <groupId>com.fasterxml.jackson.core</groupId> -->
-<!-- 		    <artifactId>jackson-databind</artifactId> -->
-<!-- 		    <version>2.13.0</version> -->
-<!-- 		</dependency>		 -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		</dependency>		
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>	
 		 
 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
