--- a/base/pom.xml
+++ b/base/pom.xml
@@ -56,11 +56,13 @@
 		    <scope>provided</scope>
 		</dependency>	
 		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
-		    <version>2.13.0</version>
-		</dependency>						
+		    <version>2.12.5</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+					
 		
 	</dependencies>
 
