--- a/base/src/main/resources/application.yml
+++ b/base/src/main/resources/application.yml
@@ -1,8 +1,17 @@
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/outboxtable_db?allowPublicKeyRetrieval=true&autoReconnect=true
+    #url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/outboxtable_db?allowPublicKeyRetrieval=true&autoReconnect=true
+    url: jdbc:mysql://${MYSQL_HOST:outboxtable-base-mysql}:3306/outboxtable_db?allowPublicKeyRetrieval=true&autoReconnect=true
     username: root
     password: mdymen_pass
     driver-class-name: com.mysql.jdbc.Driver
-    jpa:
-      show-sql: true
+  jpa:
+    show-sql: true
+
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:outboxtable-base-mysql}:3306/outboxtable_db?allowPublicKeyRetrieval=true&autoReconnect=true
+#spring.datasource.url=jdbc:mysql://database-1.c8msbexhqwuz.us-east-1.rds.amazonaws.com:3306/docker_test_database?allowPublicKeyRetrieval=true&autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=mdymen_pass
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
