--- a/job/docker-compose.yml
+++ b/job/docker-compose.yml
@@ -1,11 +1,20 @@
-version: '2.1'
+version: '3.3'
 
 services:
-  localstack:
-    image: localstack/localstack
+  outboxtable-job:
+    container_name: outboxtable-job
+    build:
+      dockerfile: Dockerfile
+      context: .
     ports:
-      - "4576:4576"
-      - "8080:8080"
+      - 8082:8080
     environment:
-      - SERVICES=sqs
-
+      - AWS_REGION=${region}
+      - AWS_ACCESS_KEY=${access_key}
+      - AWS_SECRET_ACCESS_KEY=${secret_access_key}
+    networks: 
+      - base_default
+      
+networks: 
+  base_default:
+    external: true      
