--- a/job/src/main/resources/application.yml
+++ b/job/src/main/resources/application.yml
@@ -1,7 +1,6 @@
-
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/outboxtable_db?allowPublicKeyRetrieval=true&autoReconnect=true
+    url: jdbc:mysql://${MYSQL_HOST:outboxtable-base-mysql}:3306/outboxtable_db?allowPublicKeyRetrieval=true&autoReconnect=true
     username: root
     password: mdymen_pass
     driver-class-name: com.mysql.jdbc.Driver
